--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -8,7 +8,7 @@
     </p>
 
     <form id="searchForm">
-        <input type="search"/>
+        <input type="search" id="searchBox"/>
         <button type="submit" id="searchSubmit">Rechercher</button>
     </form>
 
