--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -8,8 +8,16 @@
     </p>
 
     <form id="searchForm">
-        <input type="search" id="searchBox"/>
-        <button type="submit" id="searchSubmit">Rechercher</button>
+        <div class="field has-addons">
+            <div class="control">
+                <input type="search" class="input is-rounded" id="searchBox"/>
+            </div>
+            <div class="control">
+                <a class="button is-rounded" type="submit">
+                    <i class="fas fa-search" id="searchSubmit" style="color: black;"></i>
+                </a>
+            </div>
+        </div>
     </form>
 
     <div style="display:inline-block; margin: 20px">
