basic classes added

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -6,9 +6,9 @@
     </header>
 
 
-    <button id="home">Home</button>
-    <button id="manageProduit">Gérer Produits</button>
-    <button id="manageShop">Gérer Magasins</button>
+    <button id="home" class="button">Home</button>
+    <button id="manageProduit" class="button">Gérer Produits</button>
+    <button id="manageShop" class="button">Gérer Magasins</button>
     <!-- {{> loginButtons}}  Ajoute le bouton de connexion utilisateur -->
     <br><br>
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
