--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -1,10 +1,10 @@
 <template name="searchResults">
-    <h3>Produits</h3>
+    <h3 class="title">Produits</h3>
     {{#each displayProductsResults}}
         {{> productBanner}}
     {{/each}}
 
-    <h3>Magasins</h3>
+    <h3 class="title">Magasins</h3>
     {{#each displayShopsResults}}
         {{> shopBanner}}
     {{/each}}
