--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -1,5 +1,5 @@
 <template name="editProfile">
-    <h2>Editer le profil</h2>
+    <h2 class="title">Editer le profil</h2>
     <form id="editProfile" style="width:fit-content;">
         <label for="username">Nom d'utilisateur:</label>
         <p class="control has-icons-left">
