--- a/TFC/imports/UI/user/forgotPassword.html
+++ b/TFC/imports/UI/user/forgotPassword.html
@@ -1,9 +1,9 @@
 <template name="forgotPassword">
-    <h2>Mot de passe oublié</h2>
+    <h2 class="title">Mot de passe oublié</h2>
     <form id="forgotPassword">
         <label for="email">Email:</label>
         <input type="email" name="email" required>
         <br><br>
-        <button type="submit">Réinitialiser le mot de passe</button>
+        <button type="submit" class="button">Réinitialiser le mot de passe</button>
     </form>
 </template>
