--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -1,5 +1,5 @@
 <template name="register">
-    <h2>Inscription</h2>
+    <h2 class="title">Inscription</h2>
     <form id="register">
         <label for="username">Nom d'utilisateur:</label>
         <p class="control has-icons-left">
