--- a/TFC/imports/UI/manageShop.html
+++ b/TFC/imports/UI/manageShop.html
@@ -1,18 +1,18 @@
 <template name="manageShop">
-    <h3>Ajouter un magasin</h3>
+    <h3 class="title">Ajouter un magasin</h3>
     <form id="newShop">
         <input name="shopName" type="text" placeholder="Nom du magasin" class="input" required>
         <input name="shopDescription" type="textarea" placeholder="Description du magasin" class="input" required>
         <button id="addShop" type="submit" class="button">Ajouter le masgasin !</button>
     </form>
     <br>
-    <h3>Supprimer un magasin</h3>
+    <h3 class="title">Supprimer un magasin</h3>
     <form id="deleteShop">
         <input name="ID" type="text" placeholder="ID du magasin à supprimer" class="input" required>
         <button id="deleteShop" type="submit" class="button">Supprimer le magasin</button>
     </form>
     <br>
-    <h3>Magasins dans la database :</h3>
+    <h3 class="title">Magasins dans la database :</h3>
     {{#each displayAllShops}}
         {{> shopBanner}}
     {{/each}}
