--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -5,11 +5,11 @@
 </template>
 
 <template name="displayedProductPage">
-    <button>Retour aux résultats</button>
-    <h3><center>{{name}}</center></h3>
-    <p><center>{{description}}</center></p>
-    <div align="right"><button> Partager la page du produit sur les réseaux sociaux</button></div>
-    <div align="right"><button>Lien vers la page du magasin / site</button></div>
+    <button class="button">Retour aux résultats</button>
+    <h3 class="title" style="text-align: center;">{{name}}</h3>
+    <p style="text-align: center;">{{description}}</p>
+    <button class="button"> Partager la page du produit sur les réseaux sociaux</button>
+    <button class="button">Lien vers la page du magasin / site</button>
     {{#if currentUser}}
         <!-- Diplay favorites options only if the user is logged-->
         {{#if productInFavorites _id}}
