--- a/TFC/imports/UI/shopPage.html
+++ b/TFC/imports/UI/shopPage.html
@@ -6,11 +6,11 @@
 
 
 <template name="displayedShopPage">
-    <button>Retour aux résultats</button>
-    <h3>{{name}}</h3>
+    <button class="button">Retour aux résultats</button>
+    <h3 class="title">{{name}}</h3>
     <p>{{description}}</p>
-    <button> Partager la page du magasin sur les réseaux sociaux</button>
-    <button>Lien vers le site du magasin</button>
+    <button class="button"> Partager la page du magasin sur les réseaux sociaux</button>
+    <button class="button">Lien vers le site du magasin</button>
     {{#if currentUser}}
         <!-- Diplay favorites options only if the user is logged-->
         {{#if shopInFavorites _id}}
