--- a/TFC/imports/UI/user/login.html
+++ b/TFC/imports/UI/user/login.html
@@ -17,7 +17,7 @@
             </span>
         </p>
         <br><br>
-        <button type="submit" class="button is-success">Valider</button>
+        <button type="submit" id="submitForm" class="button is-success">Valider</button>
     </form>
     <button class="button forgotPassword">Mot de passe oublié</button>
     {{#if formErrorMessage}}
