--- a/TFC/imports/UI/user/register.html
+++ b/TFC/imports/UI/user/register.html
@@ -33,7 +33,7 @@
             </span>
         </p>
         <br><br>
-        <button type="submit" class="button is-success">Valider</button>
+        <button type="submit" id="submitForm" class="button is-success">Valider</button>
         {{#if formErrorMessage}}
             {{formErrorMessage}}
         {{/if}}
