--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -3,13 +3,17 @@
     {{#if currentUser}}
         <!-- Displayed only when the user is logged in-->
         <button class="button logout" style="color: red">Déconnexion</button>
-        <button class="button favorite">Mes favoris</button>
-        <button class="button">Magasins ajoutés</button>
-        <button class="button editProfile">Editer le profil</button>
+        <div class="tabs is-boxed is-fullwidth">
+            <ul>
+                <li class="favorite"><a>Mes favoris</a></li>
+                <li><a>Magasins ajoutés</a></li>
+                <li class="editProfile"><a>Éditer le profil</a></li>
+            </ul>
+        </div>
     {{else}}
         <!-- Displayed when the user is NOT logged in-->
         <button class="button register" style="color: red;">Inscription</button>
-        <button class=" button login" style="color: red;">Connexion</button>
+        <button class="button login" style="color: red;">Connexion</button>
     {{/if}}
     {{> Template.dynamic template=currentUserPage}} <!-- Affichage du template dynamique -->
 </template>
