search bugs correction

--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -13,9 +13,9 @@
                 <input type="search" class="input is-rounded" id="searchBox"/>
             </div>
             <div class="control">
-                <a class="button is-rounded" type="submit">
-                    <i class="fas fa-search" id="searchSubmit"></i>
-                </a>
+                <button type="submit" class="button is-rounded">
+                    <i class="fas fa-search"></i>
+                </button>
             </div>
         </div>
     </form>
