HUGE style update

--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -1,6 +1,6 @@
 <template name="productBanner">
-    <div id="{{_id}}" class="productBanner">
-        <p style="border: 2px solid black; width: fit-content;">
+    <div id="{{_id}}" class="productBanner" style="border: 2px solid black; width: fit-content;">
+        <p>
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
