--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -23,6 +23,19 @@
             </span>
         </p>
         <br><br>
+        <label for="profilePictureFile">Changer de photo de profil :</label>
+        <div class="file">
+            <label class="file-label">
+                <input class="file-input" type="file" name="profilePictureFile">
+                <span class="file-cta">
+                    <span class="file-icon">
+                        <i class="fas fa-file-upload"></i>
+                    </span>
+                    <span class="file-label">Choisir un fichier…</span>
+                </span>
+            </label>
+        </div>
+        <br><br>
         <button type="button" id="showAdvancedEdition" class="button">Options avancées</button>
         <div id="advancedEdition" style="display: none;">
             <hr>
