--- a/TFC/imports/UI/user/forgotPassword.html
+++ b/TFC/imports/UI/user/forgotPassword.html
@@ -2,7 +2,12 @@
     <h2 class="title">Mot de passe oublié</h2>
     <form id="forgotPassword">
         <label for="email">Email:</label>
-        <input type="email" name="email" required>
+        <p class="control has-icons-left">
+            <input type="email" class="input" name="email" required>
+            <span class="icon is-left">
+                <i class="fas fa-envelope"></i>
+            </span>
+        </p>
         <br><br>
         <button type="submit" class="button">Réinitialiser le mot de passe</button>
     </form>
