--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -2,13 +2,56 @@
     <header>
         <!-- Elements de l'en-tête -->
         <h1 style="text-align: center;">EKOTOPIA</h1>
-        <i class="fas fa-user icon is-large" id="userProfile"></i>
     </header>
 
+    <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="navbar-brand">
+            <a class="navbar-item" href="https://bulma.io">
+                <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+            </a>
 
-    <button id="home" class="button">Home</button>
-    <button id="manageProduit" class="button">Gérer Produits</button>
-    <button id="manageShop" class="button">Gérer Magasins</button>
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+        </div>
+
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" id="home">Home</a>
+                <a class="navbar-item" id="manageProduit">Gérer Produits</a>
+                <a class="navbar-item" id="manageShop">Gérer Magasins</a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link">More</a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item">About</a>
+                        <a class="navbar-item">Jobs</a>
+                        <a class="navbar-item">Contact</a>
+                        <hr class="navbar-divider">
+                        <a class="navbar-item">Report an issue</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        {{#if currentUser}}
+                            <i class="fas fa-user icon is-large" id="userProfile"></i>
+                        {{else}}
+                            <!-- Displayed when the user is NOT logged in-->
+                            <a class="button is-primary register">
+                                <strong>Sign up</strong>
+                            </a>
+                            <a class="button is-light login">Log in</a>
+                        {{/if}}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <!-- {{> loginButtons}}  Ajoute le bouton de connexion utilisateur -->
     <br><br>
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
