--- a/TFC/imports/UI/shopBanner.html
+++ b/TFC/imports/UI/shopBanner.html
@@ -1,6 +1,6 @@
 <template name="shopBanner">
-    <div id="{{_id}}" class="shopBanner">
-        <p style="border: 2px solid black; width: fit-content;">
+    <div id="{{_id}}" class="shopBanner" style="border: 2px solid black; width: fit-content;">
+        <p>
             ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
             <br>
         </p>
