Messages added & other style updates

--- a/TFC/imports/UI/user/forgotPassword.html
+++ b/TFC/imports/UI/user/forgotPassword.html
@@ -10,5 +10,8 @@
         </p>
         <br><br>
         <button type="submit" class="button">Réinitialiser le mot de passe</button>
+        {{#if formErrorMessage}}
+            {{formErrorMessage}}
+        {{/if}}
     </form>
 </template>
