--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -1,59 +1,56 @@
 <body>
     <header>
         <!-- Elements de l'en-tête -->
-        <h1 class="title">TITRE</h1>
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://bulma.io">
+                    <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
+                </a>
+
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                    <a class="navbar-item" id="home">Home</a>
+                    <a class="navbar-item" id="manageProduit">Gérer Produits</a>
+                    <a class="navbar-item" id="manageShop">Gérer Magasins</a>
+                    <div class="navbar-item has-dropdown is-hoverable">
+                        <a class="navbar-link">More</a>
+                        <div class="navbar-dropdown">
+                            <a class="navbar-item">About</a>
+                            <a class="navbar-item">Jobs</a>
+                            <a class="navbar-item">Contact</a>
+                            <hr class="navbar-divider">
+                            <a class="navbar-item">Report an issue</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            {{#if currentUser}}
+                                <!-- Displayed only when the user is logged in-->
+                                <i class="fas fa-user icon is-large" id="userProfile"></i>
+                            {{else}}
+                                <!-- Displayed when the user is NOT logged in-->
+                                <a class="button is-primary register">
+                                    <strong>S'inscrire</strong>
+                                </a>
+                                <a class="button is-light login">Se connecter</a>
+                            {{/if}}
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
 
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-                <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-            </a>
-
-            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item" id="home">Home</a>
-                <a class="navbar-item" id="manageProduit">Gérer Produits</a>
-                <a class="navbar-item" id="manageShop">Gérer Magasins</a>
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">More</a>
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item">About</a>
-                        <a class="navbar-item">Jobs</a>
-                        <a class="navbar-item">Contact</a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item">Report an issue</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="navbar-end">
-                <div class="navbar-item">
-                    <div class="buttons">
-                        {{#if currentUser}}
-                            <!-- Displayed only when the user is logged in-->
-                            <i class="fas fa-user icon is-large" id="userProfile"></i>
-                        {{else}}
-                            <!-- Displayed when the user is NOT logged in-->
-                            <a class="button is-primary register">
-                                <strong>S'inscrire</strong>
-                            </a>
-                            <a class="button is-light login">Se connecter</a>
-                        {{/if}}
-                    </div>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <!-- {{> loginButtons}}  Ajoute le bouton de connexion utilisateur -->
-    <br><br>
+    {{> Template.dynamic template=currentMessage}}
     {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
 </body>
