--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -5,7 +5,7 @@
 </template>
 
 <template name="displayedProductPage">
-    <button class="button">Retour aux résultats</button>
+    <button class="button">Revenir à la page précédente</button>
     <h3 class="title" style="text-align: center;">{{name}}</h3>
     <p style="text-align: center;">{{description}}</p>
     <button class="button"> Partager la page du produit sur les réseaux sociaux</button>
