--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -1,15 +1,28 @@
 <template name="searchResults">
+    <form id="searchForm">
+        <div class="field has-addons">
+            <div class="control">
+                <input type="search" class="input is-rounded" id="searchBox" value="{{getSearchQuery}}"/>
+            </div>
+            <div class="control">
+                <button type="submit" class="button is-rounded">
+                    <i class="fas fa-search"></i>
+                </button>
+            </div>
+        </div>
+    </form>
     <div class="field has-addons">
         <button type="button" class="button is-static">Trier par :</button>
         <div class="control has-icons-left">
             <div class="select">
                 <select id="sortResults">
-                    <option value="A-Z" selected>Ordre alphabétique</option>
+                    <option value="default" selected>Par défaut</option>
+                    <option value="A-Z">Ordre alphabétique</option>
                     <option value="Z-A">Ordre alphabétique inversé</option>
+                    <option value='random'>Aléatoire</option>
                 </select>
             </div>
             <div id="sortResultsIconContainer" class="icon is-left" style="color: black;">
-                <i class="fas fa-sort-alpha-down"></i>
             </div>
         </div>
     </div>
