--- a/TFC/imports/UI/user/userProfile.html
+++ b/TFC/imports/UI/user/userProfile.html
@@ -3,7 +3,12 @@
         <!-- Displayed only when the user is logged in-->
         <div class="tabs is-boxed is-fullwidth">
             <ul>
-                <li id="favorite"><a>Mes favoris</a></li>
+                <li id="favorite">
+                    <a>
+                        <span class="icon"><i class="fas fa-bookmark"></i></span>
+                        <span>Mes favoris</span>
+                    </a>
+                </li>
                 <li id="editProfile">
                     <a>
                         <span class="icon"><i class="fas fa-user-edit"></i></span>
