--- a/TFC/imports/UI/shopBanner.html
+++ b/TFC/imports/UI/shopBanner.html
@@ -1,8 +1,17 @@
 <template name="shopBanner">
-    <div id="{{_id}}" class="shopBanner" style="border: 2px solid black; width: fit-content;">
-        <p>
-            ID : {{_id}}<br>  Nom : {{name}} <br> Description : {{description}}
-            <br>
-        </p>
-    </div>
+    <article class="message is-info shopBanner" id="{{_id}}">
+        <div class="message-header">
+            <p>{{name}} ({{_id}})</p>
+        </div>
+        <div class="message-body">
+            <div class="field has-addons">
+                <figure class="image is-128x128">
+                    <img src="https://bulma.io/images/placeholders/128x128.png">
+                </figure>
+                <p>
+                    Description : {{description}}
+                </p>
+            </div>
+        </div>
+    </article>
 </template>
