--- a/TFC/imports/UI/user/editProfile.html
+++ b/TFC/imports/UI/user/editProfile.html
@@ -1,6 +1,6 @@
 <template name="editProfile">
     <h2 class="title">Editer le profil</h2>
-    <form id="editProfile" style="width:fit-content;">
+    <form id="editProfileForm" style="width:fit-content;">
         <label for="username">Nom d'utilisateur:</label>
         <p class="control has-icons-left">
             <input type="text" class="input" name="username" id="username" required/>
@@ -24,12 +24,12 @@
         </p>
         <br><br>
         <label for="profilePictureFile">Changer de photo de profil :</label>
-        <div class="file">
+        <div class="file is-medium">
             <label class="file-label">
                 <input class="file-input" type="file" name="profilePictureFile">
                 <span class="file-cta">
                     <span class="file-icon">
-                        <i class="fas fa-file-upload"></i>
+                        <i class="fas fa-file-image"></i>
                     </span>
                     <span class="file-label">Choisir un fichier…</span>
                 </span>
